# rust-algorithms-packt

./: .gitignore  LICENSE  README.md
introduction/optional_library/: Cargo.toml
introduction/structs/: Cargo.toml
introduction/v7_pointers/: Cargo.toml
p1_introduction/: readme.md
p1_introduction/crate/example_crate/: Cargo.toml  readme.md
p1_introduction/loops/: Cargo.toml
p1_introduction/optionals/: Cargo.toml
p1_introduction/v1_hello/: Cargo.toml
p1_introduction/v8_box/: Cargo.toml
p1_introduction/variables/: Cargo.toml
p2_algorithms/: readme.md
p2_algorithms/v1-sorting/: Cargo.toml
p2_algorithms/v2-merge-sort/: Cargo.toml
p2_algorithms/v3-quick-sort/: Cargo.toml
p2_algorithms/v4-improve-sort/: Cargo.toml
p2_algorithms/v5-sort-multiple-threads/: Cargo.toml
p2_algorithms/v6-thread-pool/: Cargo.toml
p2_algorithms/v7-dynamic-programming/: Cargo.toml
p3_linked_lists_and_binary_trees/: readme.md
p3_linked_lists_and_binary_trees/v1_linked_lists/: Cargo.toml
p3_linked_lists_and_binary_trees/v2_double_linked_lists/: Cargo.toml
p3_linked_lists_and_binary_trees/v4_binary_trees/: Cargo.toml
p3_linked_lists_and_binary_trees/v5_balance_binary_tree/: Cargo.toml
p3_linked_lists_and_binary_trees/v6_skip_lists/: Cargo.toml
p4_connected_nodes/: Readme.md
p5_hashmap/: readme.md
p5_hashmap/v1_hmap/: Cargo.toml
p7_persistent_data/: readme.md
p7_persistent_data/blobfile/: Cargo.toml
p7_persistent_data/blobfile/src/: blob.rs  blobstore.rs  error.rs  lib.rs
p7_persistent_data/blobfile/test_data/: create_file  t_read_write_string
(+56 files in other folders)
