[package]
name = "example_crate_do_not_use_uwu"
version = "0.1.0"
authors = ["Alejandro Vásquez Madrid <jose5m45@gmail.com>"]
edition = "2018"
keywords = ["do", "not", "use"]
description = "my crate for testing purpose, do not use uwu"
readme = "readme.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
